--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -37,7 +37,7 @@
                 <p>Home - FAQs</p>
             </div>
             <div class="main-img">
-                <img src="../assets/blog/Illustration.png" />
+                <img src="../assets/blog/Illustration.png" alt="girl typing illustration" />
             </div>
         </section>
     </header>
