--- a/templates/blogDetails.html
+++ b/templates/blogDetails.html
@@ -37,7 +37,7 @@
                 <p>Home - Right Side Bar Blog</p>
             </div>
             <div class="main-img">
-                <img src="../assets/blog/Illustration.png" />
+                <img src="../assets/blog/Illustration.png" alt="girl typing illustration" />
             </div>
         </section>
     </header>
@@ -47,7 +47,7 @@
             <div class="post">
 
                 <div class="article">
-                    <img src="../assets/blog/blog_article.png" class="blog-image" />
+                    <img src="../assets/blog/blog_article.png" class="blog-image" alt="Main article image" />
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
                     </a>
@@ -104,7 +104,7 @@
             <div class="recent-posts">
                 <h4 class="section-header">Recent Posts</h4>
                 <div class="post-1">
-                    <img src="../assets/blog/post-img-1.png" class="thumbnail" />
+                    <img src="../assets/blog/post-img-1.png" class="thumbnail" alt="blog thumbnail" />
                     <div class="post-info">
                         <h4>The master bedroom</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
