--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -39,7 +39,7 @@
                 <button class="main-button trial-buttton">Free Trial</button>
             </div>
             <div class="main-img">
-                <img src="../assets/homepage/Device.png" />
+                <img src="../assets/homepage/Device.png" alt="phone image" />
             </div>
             <div class="mouse">
                 <span><a href="#section2"><img src="../assets/homepage/ScroolDown.png" /></a></span>
@@ -51,17 +51,17 @@
     <section class="section2" id="section2">
         <div class="cards-container">
             <div class="cards-all card-1">
-                <img src="../assets/homepage/Icon1.svg" />
+                <img src="../assets/homepage/Icon1.svg" alt="Analysis icon" />
                 <h4>Analysis</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
             </div>
             <div class="cards-all card-2">
-                <img src="../assets/homepage/Icon2.svg" />
+                <img src="../assets/homepage/Icon2.svg" alt="Design icon" />
                 <h4>Clean Design</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
             </div>
             <div class="cards-all card-3">
-                <img src="../assets/homepage/Icon3.svg" />
+                <img src="../assets/homepage/Icon3.svg" alt="Messaging icon" />
                 <h4>Messaging</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
             </div>
@@ -70,8 +70,8 @@
     <section class="section3">
         <div class="container1">
             <div class="container1-img">
-                <img src="../assets/homepage/Rectangle.svg" class="rectangle1" />
-                <img src="../assets/homepage/messaging_img.png" class="photos1" />
+                <img src="../assets/homepage/Rectangle.svg" class="rectangle1" alt="Rectangle image" />
+                <img src="../assets/homepage/messaging_img.png" class="photos1" alt="People messaging image" />
             </div>
             <div class="container1-info">
                 <h3>Easy Messaging</h3>
@@ -86,8 +86,8 @@
                 <button class="read-more-btn">Read More<i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="container2-img">
-                <img src="../assets/homepage/Rectangle.svg" class="rectangle2" />
-                <img src="../assets/homepage/keepintouch.png" class="photos2" />
+                <img src="../assets/homepage/Rectangle.svg" class="rectangle2" alt="Rectangle image" />
+                <img src="../assets/homepage/keepintouch.png" class="photos2" alt="People messaging image" />
             </div>
 
         </div>
@@ -101,17 +101,17 @@
         <div class="cards-container container-section4">
             <hr />
             <div class="account-card">
-                <img src="../assets/homepage/account_icon.svg" />
+                <img src="../assets/homepage/account_icon.svg" alt="Create an account icon" />
                 <h4>Create An Account</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
             </div>
             <div class="email-card">
-                <img src="../assets/homepage/email_icon.svg" />
+                <img src="../assets/homepage/email_icon.svg" alt="Confirm email icon" />
                 <h4>Confirm Email</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
             </div>
             <div class="results-card">
-                <img src="../assets/homepage/results_icon.svg" />
+                <img src="../assets/homepage/results_icon.svg" alt="Results icon" />
                 <h4>See Results</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
             </div>
@@ -122,21 +122,16 @@
             <h3>Pricing Plan</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</p>
             <div class="info-toggle-btn">
-                <!--
                 <input id="on" class="toggle left" name="toggle" value="monthly" type="radio" checked>
                 <label for="on" class="button-left">Monthly</label>
                 <input id="off" class="toggle right" name="toggle" value="yearly" type="radio">
                 <label for="off" class="button-right">Yearly</label>
--->
-                <input type="checkbox" id="checkbox" />
-                <label for="checkbox"></label>
-
             </div>
         </div>
         </div>
         <div class="pricing-cards">
             <div class="pricing-card1">
-                <img src="../assets/homepage/standart-icon.svg" class="standart-icon" />
+                <img src="../assets/homepage/standart-icon.svg" class="standart-icon" alt="Standart Plan icon" />
                 <h4>Standard</h4>
                 <ul class="pricing-list">
                     <li>2gb Hosting</li>
@@ -149,7 +144,7 @@
                 <button class="try-now-active">Try Now</button>
             </div>
             <div class="pricing-card2">
-                <img src="../assets/homepage/premium-icon.svg" class="premium-icon" />
+                <img src="../assets/homepage/premium-icon.svg" class="premium-icon" alt="Premium Plan icon" />
                 <h4>Premium</h4>
                 <ul class="pricing-list">
                     <li>2gb Hosting</li>
@@ -185,28 +180,28 @@
         </div>
         <div class="news-articles">
             <div class="main-article">
-                <img src="../assets/homepage/main-article.png" />
+                <img src="../assets/homepage/main-article.png" alt="Main Blog image" />
                 <h3>The master bedroom suite is phenomenaly spacious</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <button class="continue-btn">Continue Reading<i class="fas fa-arrow-right"></i></button>
             </div>
             <div class="all-articles">
                 <div class="article1">
-                    <img src="../assets/homepage/article1.png" />
+                    <img src="../assets/homepage/article1.png" alt="Main Blog image" />
                     <div class="article-info">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                     </div>
                 </div>
                 <div class="article2">
-                    <img src="../assets/homepage/article2.png" />
+                    <img src="../assets/homepage/article2.png" alt="Main Blog image" />
                     <div class="article-info">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
                     </div>
                 </div>
                 <div class="article3">
-                    <img src="../assets/homepage/article3.png" />
+                    <img src="../assets/homepage/article3.png" alt="Main Blog image" />
                     <div class="article-info">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
