--- a/templates/rightBlog.html
+++ b/templates/rightBlog.html
@@ -37,14 +37,14 @@
                 <p>Home - Right Side Bar Blog</p>
             </div>
             <div class="main-img">
-                <img src="../assets/blog/Illustration.png" />
+                <img src="../assets/blog/Illustration.png" alt="girl typing illustration" />
             </div>
         </section>
     </header>
     <section class="main-content">
         <div class="blog-posts">
             <div class="blog-post card-1">
-                <img src="../assets/blog/blog-img-1.png" class="blog-thumbnail" />
+                <img src="../assets/blog/blog-img-1.png" class="blog-thumbnail" alt="blog thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="blog-post card-2">
-                <img src="../assets/blog/blog-img-2.png" class="blog-thumbnail" />
+                <img src="../assets/blog/blog-img-2.png" class="blog-thumbnail" alt="blog thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -75,7 +75,7 @@
             </div>
             <div class="blog-post card-3">
 
-                <img src="../assets/blog/blog-img-3.png" class="blog-thumbnail" />
+                <img src="../assets/blog/blog-img-3.png" class="blog-thumbnail" alt="blog thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -91,7 +91,7 @@
 
             </div>
             <div class="blog-post card-4">
-                <img src="../assets/blog/blog-img-4.png" class="blog-thumbnail" />
+                <img src="../assets/blog/blog-img-4.png" class="blog-thumbnail" alt="blog thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
@@ -106,7 +106,7 @@
                 </div>
             </div>
             <div class="blog-post card-5">
-                <img src="../assets/blog/blog-img-5.png" class="blog-thumbnail" />
+                <img src="../assets/blog/blog-img-5.png" class="blog-thumbnail" alt="blog thumbnail" />
                 <div class="post-info">
                     <a href="blogDetails.html">
                         <h4>The master bedroom suite is phenomenaly spacious</h4>
