--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -42,9 +42,8 @@
                 <img src="../assets/homepage/Device.png" alt="phone image" />
             </div>
             <div class="mouse">
-                <span><a href="#section2"><img src="../assets/homepage/ScroolDown.png" /></a></span>
+                <span><a href="#section2"><img src="../assets/homepage/ScroolDown.png" class="scroll-down-btn"/></a></span>
             </div>
-
         </section>
     </header>
 
